tests/gql/snapshots/gql__snapshots__parse_create_node_type_list_type_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: stmt
---
Ddl:
  CreateNodeType:
    name: Product
    properties:
      - name: name
        prop_type: String
        required: true
        default: ~
      - name: tags
        prop_type:
          List: ~
        required: false
        default: ~
